Endpoint get para actividades eliminadas
